ENTESB-11938: Adding the operator specific way to capture the data source names and properties not only in ENV properties (#84)
