# deploy/crs/vdb_with_openapi_ddl.yaml
@@ -4,15 +4,16 @@ metadata:
   name: petstore-vdb
 spec:
   replicas: 1
-  env:
-  - name: SPRING_DATASOURCE_SAMPLEDB_USERNAME
-    value: user
-  - name: SPRING_DATASOURCE_SAMPLEDB_PASSWORD
-    value: mypassword
-  - name: SPRING_DATASOURCE_SAMPLEDB_DATABASENAME
-    value: sampledb
-  - name: SPRING_DATASOURCE_SAMPLEDB_JDBCURL
-    value: jdbc:postgresql://postgresql/$(SPRING_DATASOURCE_SAMPLEDB_DATABASENAME)
+  datasources:
+    - name: sampledb
+      type: postgresql
+      properties:
+        - name: username
+          value: user
+        - name: password
+          value: mypassword
+        - name: jdbc-url
+          value: jdbc:postgresql://sampledb/sampledb
   build:
     source:
       ddl: |
